...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="53" translatesAutoresizingMaskIntoConstraints="NO" id="7u3-iD-hM2">
                                <rect key="frame" x="25" y="69" width="364" height="376"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CKN-Uu-OtQ">
                                        <rect key="frame" x="0.0" y="0.0" width="364" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Surname" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DK1-Yv-b0K">
                                        <rect key="frame" x="0.0" y="87" width="364" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zst-NZ-snH">
                                        <rect key="frame" x="0.0" y="174" width="364" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ynA-Td-oae">
                                        <rect key="frame" x="0.0" y="261" width="364" height="31"/>
...
                            <constraint firstItem="60p-R1-jrE" firstAttribute="top" secondItem="EAs-Jc-rpX" secondAttribute="top" id="5vh-V1-ld2"/>
                            <constraint firstItem="60p-R1-jrE" firstAttribute="leading" secondItem="EAs-Jc-rpX" secondAttribute="leading" id="OEM-nf-niV"/>
                            <constraint firstItem="EAs-Jc-rpX" firstAttribute="bottom" secondItem="60p-R1-jrE" secondAttribute="bottom" id="aEt-Do-yMd"/>
                            <constraint firstItem="EAs-Jc-rpX" firstAttribute="trailing" secondItem="60p-R1-jrE" secondAttribute="trailing" id="wXz-CX-bU3"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Persons" id="Rqp-4a-2se">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="WQC-r8-gb7">
                            <connections>
                                <action selector="addNewContact:" destination="y71-jd-yee" id="pGA-VS-fn5"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
